# ChangeLog for app-misc/pfm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/pfm/ChangeLog,v 1.1 2011/11/18 09:28:25 radhermit Exp $

*pfm-2.12.0 (18 Nov 2011)

  18 Nov 2011; Tim Harder <radhermit@gentoo.org> +pfm-2.12.0.ebuild,
  +metadata.xml:
  Initial import.
