@@ -1,4 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST pfm-2.12.0.tar.gz 873382 SHA256 a7e912dea813d5f8b42aef49f483e4c8a2f4f86e87d1035bb46bcfe789ccfab4 SHA512 04cedfa857cb37648e26cd67ab8de552f4858a7811f35d510b6415b30ab4ddfb115bf5718d02a71ea034d7c1e1e172881ca50f645653fa69e6085fc4aae3c73c WHIRLPOOL b5558ab6268202a691e91fa5d72090b627f9f6490a3548f924adc8c14b80bf6c2373e1f703c5186aebb63ab964628653cd269d6a4f0a2b35955f08e5bee55a94
+DIST pfm-2.12.3.tar.gz 2272053 SHA256 01a2845916f7fc4bcadb929f0fcaf05ab838016efdc15568ceefb0e209809a00 SHA512 d9feeaa95a0114ee513835a9273b62164a851ae8599d27575b3545f02144b4cf970a066afd5acec03092f0d49c85929c8127d1e134d1e80c15fe6d0a9b6921fc WHIRLPOOL 680cf8edc4540e3f611c515a2d4a9548d4832b3d5d459832333c41fb8f380bfdd8779557af4ec0341788bb2d92b76cbb507467caa990634d0bb1272638418cd5
 EBUILD pfm-2.12.0.ebuild 779 SHA256 6f571641b2f161429347451f01eb462323870dfda92c0cf67c2891d586404151 SHA512 36845fa808bd5ba8318a37551b21150e0f9cf779df13dfbe2223d909c4d2ce31cff69628a8ec9954428f4702dd76fdccf9a619e8e4d803b51e43b5f29572e655 WHIRLPOOL b03f6b935606a721fe354a06d466b2502900d2412b19829afd1ab196c81ff32f43ebbd4223d4a6cf6bcb83fe08c8360b33934a163888adf6aea6fea2539af7d4
-MISC ChangeLog 332 SHA256 3ad58935f426dbeb9f00d4a7fee0a9b42a687437370193a8ddbf6779478a221c SHA512 ecbca5bfb3d6c2d2377979fca8052ea6adadef41311e769c76777b7cf6e1a2f89c3bcfbf3d7ddabaaf291eb242e3665b0b3f5df75e8cfd9d99eae8edf24218b8 WHIRLPOOL 0e3b76ea0250732112b4de377f9cde315de25af87e88309b2d3f865589c1931068de10b44f17816fc9fa040460df41ab32f55c4f386d8c07091ce2ebe4e90541
+EBUILD pfm-2.12.3.ebuild 769 SHA256 7d6093faca144013d288101b03ceef9152c8f439505edeaa04341afaa1bfa2d9 SHA512 dc05e75a1802b3bff5959647cac846fd9040e26a34ce40afe5afc6154805ac8716454b7385a3304693c96d37b1707abe27eedb633e59c2579b853f214341bd40 WHIRLPOOL adbe6f4bf052c5a7f449aebbb725025e1223e83f3115a4231642b5641c4bcb346b65d74683c3c44a2d60dbd20c64510a72e620acc9ec74aa50b15049053db0ec
+MISC ChangeLog 445 SHA256 8e42bcabdeddb6b1e79e0501269c920e3ab4a3fc8dfa5d06d8ea268974b41cd7 SHA512 fea7ad905c48fc4773e3340b6e6ca6a5b76d1e07f566ada239441cfeeba8aac3f1fc98dc396f5404e9b50c8538007ebfea347811dfc0fc66166627ffd4edbb9c WHIRLPOOL b6f780a9ef50e297b1b52c7d38aad1cde6efdd76e2bfae232c764ba05e5c36a5933bdc2b74ced0887eef2357df1ab90ed1b2069ba5fe9f7e67805e8a8447fb1f
 MISC metadata.xml 236 SHA256 5285fd5ca6bc85e0392ff64ec8e54d0018ebd761d3977869c00c93dee45ea09d SHA512 a1abf9a60fb1a2078d0475df655f8abd4b2f877f8d232028232fafca2eb7e7ae6ec2c835c4fe0ef27b3b5655d746d1fe53bbcb353703819448ddec84acdd4215 WHIRLPOOL fdbf5fcd34aa17330575f013aef4c87a8b039b62b6de3337a4004a6a0217238ceca43fa15425c30ddb7a5a632de7eb138ed541dfb161614cba817527297781e2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iQEaBAEBCAAGBQJTR1AoAAoJEEqz6FtPBkyjIRsH8JtFeSicIsIQdzxn04ecvA8O
+oAPCDV43VY3Jr/+vXSOZPZTPchuQRVEOahlFkU/gTZpTiqce5k2E+MO/U3BMTajn
+3B5L6yvrHUT5kmL7NnkA+YrEcEepIOH0rkqJWyj8vyw0s5ytoyQQYjtVHJjbkoaz
+jkDMNCDSv4/eU9jQHwWD1mXVQCNHb7FdZJBJjWAnC4UybMoJ/QhnDQKeKE/DKY19
+arsjUmu8tNYVJr/l5LsYo/rWWHw2TuX4WDOMwhOtMX7uBTVU1nFMGG2Nu7c+K3cf
+V53covuOdwqlGnk1+AP++sHkZX2ZHbN5aosnRxJwKct/zH3z5HBZhfnF2qE+
+=yV1D
+-----END PGP SIGNATURE-----
