@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/pfm
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/pfm/ChangeLog,v 1.1 2011/11/18 09:28:25 radhermit Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/pfm/ChangeLog,v 1.2 2014/04/11 02:15:03 radhermit Exp $
+
+*pfm-2.12.3 (11 Apr 2014)
+
+  11 Apr 2014; Tim Harder <radhermit@gentoo.org> +pfm-2.12.3.ebuild:
+  Version bump.
 
 *pfm-2.12.0 (18 Nov 2011)
 
